fix layout bug

--- a/src/app/gallery/panel/panel.component.scss
+++ b/src/app/gallery/panel/panel.component.scss
@@ -25,8 +25,7 @@
   position: relative;
   float: left;
   height: 100%;
-  width: min-content;
-  flex: 1 1 auto;
+  flex: 1 1 0;
   scrollbar-width: 5px;
   overflow-x: hidden;
   overflow-y: scroll;
